--- a/myFramework/myResources/Reports/11-03-19_22_51_38.html
+++ b/myFramework/myResources/Reports/11-03-19_22_51_38.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Oct 31, 2019 04:01:22 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Nov 3, 2019 10:51:38 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -60,6 +60,7 @@
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
 										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
+					<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -102,10 +103,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='66.667%'><span class='strong'>2</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
+                    <span class='strong tooltipped' data-position='top' data-tooltip='33.333%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
                 </div>
             </div>
         </div>
@@ -123,17 +124,52 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
+				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>TC004_AddEmployee</span>
-						<span class='test-time'>Oct 31, 2019 04:01:34 PM</span>
+						<span class='test-name'>TC003_FetchTrainingtabSubmenu</span>
+						<span class='test-time'>Nov 3, 2019 10:51:49 PM</span>
+						<span class='test-status right fail'>fail</span>
+					</div>
+					<div class='test-content hide'>
+<div class='test-time-info'>
+	<span class='label start-time'>Nov 3, 2019 10:51:49 PM</span>
+	<span class='label end-time'>Nov 3, 2019 10:51:49 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+762ms</span>
+</div>
+<div class='test-steps'>
+	<table class='bordered table-results'>
+		<thead>
+			<tr>
+				<th>Status</th>
+				<th>Timestamp</th>
+				<th>Details</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class='log' status='fail'>
+				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
+				<td class='timestamp'>10:51:49 PM</td>
+				<td class='step-details'>
+						Test Failed
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_51_49.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_51_49.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_51_49.png'>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+					</div>
+				</li>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
+					<div class='test-heading'>
+						<span class='test-name'>TC001_LogintoHRM</span>
+						<span class='test-time'>Nov 3, 2019 10:52:01 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Oct 31, 2019 04:01:34 PM</span>
-	<span class='label end-time'>Oct 31, 2019 04:03:22 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 1m 48s+594ms</span>
+	<span class='label start-time'>Nov 3, 2019 10:52:01 PM</span>
+	<span class='label end-time'>Nov 3, 2019 10:52:14 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 12s+922ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,18 +183,53 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:01:47 PM</td>
+				<td class='timestamp'>10:52:13 PM</td>
 				<td class='step-details'>
-						Login Data provided succesfully
+						Login Data input provided succesfully
 					
 				</td>
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>4:03:22 PM</td>
+				<td class='timestamp'>10:52:14 PM</td>
 				<td class='step-details'>
 						Test Passed
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_10-31-19_16_03_22.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_10-31-19_16_03_22.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_10-31-19_16_03_22.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_52_13.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_52_13.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_52_13.png'>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+					</div>
+				</li>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
+					<div class='test-heading'>
+						<span class='test-name'>TC002_LogoutTest</span>
+						<span class='test-time'>Nov 3, 2019 10:52:14 PM</span>
+						<span class='test-status right pass'>pass</span>
+					</div>
+					<div class='test-content hide'>
+<div class='test-time-info'>
+	<span class='label start-time'>Nov 3, 2019 10:52:14 PM</span>
+	<span class='label end-time'>Nov 3, 2019 10:52:20 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 5s+729ms</span>
+</div>
+<div class='test-steps'>
+	<table class='bordered table-results'>
+		<thead>
+			<tr>
+				<th>Status</th>
+				<th>Timestamp</th>
+				<th>Details</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>10:52:20 PM</td>
+				<td class='step-details'>
+						Test Passed
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_52_19.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_52_19.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_52_19.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -194,7 +265,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>1</div>
+					<div class='panel-lead'>3</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -206,19 +277,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Oct 31, 2019 04:01:22 PM</div>
+					<div class='panel-lead'>Nov 3, 2019 10:51:38 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Oct 31, 2019 04:03:22 PM</div>
+			 		<div class='panel-lead'>Nov 3, 2019 10:52:20 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 1m 59s+965ms</div>
+					<div class='panel-lead'>0h 0m 41s+744ms</div>
 				</div>
 			</div>
 		</div>
@@ -229,14 +300,14 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 1,
-				passParent: 1,
-				failParent: 0,
+                parentCount: 3,
+				passParent: 2,
+				failParent: 1,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 0,
+				exceptionsParent: 1,
 				childCount: 0,
 				passChild: 0,
 				failChild: 0,
@@ -261,7 +332,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "TC004_AddEmployee":108.594
+			        "TC003_FetchTrainingtabSubmenu":0.762,"TC001_LogintoHRM":12.922,"TC002_LogoutTest":5.729
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
