--- a/myFramework/myResources/Reports/11-03-19_23_15_22.html
+++ b/myFramework/myResources/Reports/11-03-19_23_15_22.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Nov 3, 2019 09:13:40 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Nov 3, 2019 11:15:22 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -59,7 +59,7 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
+										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -102,10 +102,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>3</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
                 </div>
             </div>
         </div>
@@ -123,17 +123,17 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>TC004_AddEmployee</span>
-						<span class='test-time'>Nov 3, 2019 09:13:48 PM</span>
-						<span class='test-status right fail'>fail</span>
+						<span class='test-name'>2_TC003_FetchTrainingMenu</span>
+						<span class='test-time'>Nov 3, 2019 11:15:32 PM</span>
+						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 3, 2019 09:13:48 PM</span>
-	<span class='label end-time'>Nov 3, 2019 09:14:31 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 43s+327ms</span>
+	<span class='label start-time'>Nov 3, 2019 11:15:32 PM</span>
+	<span class='label end-time'>Nov 3, 2019 11:15:49 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 16s+750ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,18 +147,88 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>9:13:58 PM</td>
+				<td class='timestamp'>11:15:49 PM</td>
 				<td class='step-details'>
-						Login Data provided succesfully
+						Test Passed
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_15_49.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_15_49.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_15_49.png'>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+					</div>
+				</li>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
+					<div class='test-heading'>
+						<span class='test-name'>TC001_LogintoHRM</span>
+						<span class='test-time'>Nov 3, 2019 11:16:00 PM</span>
+						<span class='test-status right pass'>pass</span>
+					</div>
+					<div class='test-content hide'>
+<div class='test-time-info'>
+	<span class='label start-time'>Nov 3, 2019 11:16:00 PM</span>
+	<span class='label end-time'>Nov 3, 2019 11:16:12 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 12s+223ms</span>
+</div>
+<div class='test-steps'>
+	<table class='bordered table-results'>
+		<thead>
+			<tr>
+				<th>Status</th>
+				<th>Timestamp</th>
+				<th>Details</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>11:16:11 PM</td>
+				<td class='step-details'>
+						Login Data input provided succesfully
 					
 				</td>
 			</tr>
-			<tr class='log' status='fail'>
-				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>9:14:31 PM</td>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>11:16:12 PM</td>
 				<td class='step-details'>
-						Test Failed
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_21_14_31.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_21_14_31.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_21_14_31.png'>
+						Test Passed
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_16_12.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_16_12.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_16_12.png'>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+					</div>
+				</li>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
+					<div class='test-heading'>
+						<span class='test-name'>TC002_LogoutTest</span>
+						<span class='test-time'>Nov 3, 2019 11:16:12 PM</span>
+						<span class='test-status right pass'>pass</span>
+					</div>
+					<div class='test-content hide'>
+<div class='test-time-info'>
+	<span class='label start-time'>Nov 3, 2019 11:16:12 PM</span>
+	<span class='label end-time'>Nov 3, 2019 11:16:18 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 5s+80ms</span>
+</div>
+<div class='test-steps'>
+	<table class='bordered table-results'>
+		<thead>
+			<tr>
+				<th>Status</th>
+				<th>Timestamp</th>
+				<th>Details</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>11:16:18 PM</td>
+				<td class='step-details'>
+						Test Passed
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_16_17.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_16_17.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_16_17.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -194,7 +264,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>1</div>
+					<div class='panel-lead'>3</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -206,19 +276,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Nov 3, 2019 09:13:40 PM</div>
+					<div class='panel-lead'>Nov 3, 2019 11:15:22 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Nov 3, 2019 09:14:31 PM</div>
+			 		<div class='panel-lead'>Nov 3, 2019 11:16:18 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 51s+678ms</div>
+					<div class='panel-lead'>0h 0m 55s+538ms</div>
 				</div>
 			</div>
 		</div>
@@ -229,14 +299,14 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 1,
-				passParent: 0,
-				failParent: 1,
+                parentCount: 3,
+				passParent: 3,
+				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 1,
+				exceptionsParent: 0,
 				childCount: 0,
 				passChild: 0,
 				failChild: 0,
@@ -261,7 +331,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "TC004_AddEmployee":43.327
+			        "2_TC003_FetchTrainingMenu":16.75,"TC001_LogintoHRM":12.223,"TC002_LogoutTest":5.08
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
