--- a/myFramework/myResources/Reports/11-03-19_23_22_43.html
+++ b/myFramework/myResources/Reports/11-03-19_23_22_43.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Nov 3, 2019 10:14:06 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Nov 3, 2019 11:22:43 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -126,15 +126,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>TC003_FetchTrainingtabSubmenu</span>
-						<span class='test-time'>Nov 3, 2019 10:14:17 PM</span>
+						<span class='test-name'>TC003_FetchTrainingMenu</span>
+						<span class='test-time'>Nov 3, 2019 11:22:55 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 3, 2019 10:14:17 PM</span>
-	<span class='label end-time'>Nov 3, 2019 10:14:17 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+708ms</span>
+	<span class='label start-time'>Nov 3, 2019 11:22:55 PM</span>
+	<span class='label end-time'>Nov 3, 2019 11:22:56 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+846ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -148,10 +148,10 @@
 		<tbody>
 			<tr class='log' status='fail'>
 				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>10:14:17 PM</td>
+				<td class='timestamp'>11:22:56 PM</td>
 				<td class='step-details'>
 						Test Failed
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_17.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_17.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_17.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_22_55.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_22_55.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_22_55.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -162,14 +162,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>TC001_LogintoHRM</span>
-						<span class='test-time'>Nov 3, 2019 10:14:28 PM</span>
+						<span class='test-time'>Nov 3, 2019 11:23:07 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 3, 2019 10:14:28 PM</span>
-	<span class='label end-time'>Nov 3, 2019 10:14:41 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 12s+735ms</span>
+	<span class='label start-time'>Nov 3, 2019 11:23:07 PM</span>
+	<span class='label end-time'>Nov 3, 2019 11:23:20 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 12s+682ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -183,7 +183,7 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>10:14:40 PM</td>
+				<td class='timestamp'>11:23:19 PM</td>
 				<td class='step-details'>
 						Login Data input provided succesfully
 					
@@ -191,10 +191,10 @@
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>10:14:41 PM</td>
+				<td class='timestamp'>11:23:20 PM</td>
 				<td class='step-details'>
 						Test Passed
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_41.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_41.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_41.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_23_19.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_23_19.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_23_19.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -205,14 +205,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>TC002_LogoutTest</span>
-						<span class='test-time'>Nov 3, 2019 10:14:41 PM</span>
+						<span class='test-time'>Nov 3, 2019 11:23:20 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 3, 2019 10:14:41 PM</span>
-	<span class='label end-time'>Nov 3, 2019 10:14:46 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+495ms</span>
+	<span class='label start-time'>Nov 3, 2019 11:23:20 PM</span>
+	<span class='label end-time'>Nov 3, 2019 11:23:25 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+826ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -226,10 +226,10 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>10:14:46 PM</td>
+				<td class='timestamp'>11:23:25 PM</td>
 				<td class='step-details'>
 						Test Passed
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_45.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_45.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_22_14_45.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_23_24.png' src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_23_24.png' data-src='C:\Users\vs0322\git\myFramework-2019\myFramework./myResources/Screenshots/screenshot_11-03-19_23_23_24.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -277,19 +277,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Nov 3, 2019 10:14:06 PM</div>
+					<div class='panel-lead'>Nov 3, 2019 11:22:43 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Nov 3, 2019 10:14:46 PM</div>
+			 		<div class='panel-lead'>Nov 3, 2019 11:23:25 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 39s+472ms</div>
+					<div class='panel-lead'>0h 0m 41s+812ms</div>
 				</div>
 			</div>
 		</div>
@@ -332,7 +332,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "TC003_FetchTrainingtabSubmenu":0.708,"TC001_LogintoHRM":12.735,"TC002_LogoutTest":4.495
+			        "TC003_FetchTrainingMenu":0.846,"TC001_LogintoHRM":12.682,"TC002_LogoutTest":4.826
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
