--- a/myFramework/myResources/Reports/TestExecutionReport.html
+++ b/myFramework/myResources/Reports/TestExecutionReport.html
@@ -7,7 +7,7 @@
 	<meta name='description' content='' />
 	<meta name='robots' content='noodp, noydir' />
 	<meta name='viewport' content='width=device-width, initial-scale=1' />
-	<meta id="timeStampFormat" name="timeStampFormat" content='MMM dd, yyyy HH:mm:ss'/>
+	<meta id="timeStampFormat" name="timeStampFormat" content='MMM dd yyyy HH:mm'/>
 	
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css' />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -38,13 +38,13 @@
 						<li class='waves-effect'><a href='#!' onclick="configureView(-1);chartsView('dashboard');" view='dashboard-view'><i class='material-icons'>track_changes</i></a></li>
 		</ul>
 		<!-- report name -->
-		<span class='report-name'>Test Results Report</span>
+		<span class='report-name'>Metro Open ROADM - Regression Test Report</span>
 		<!-- report headline -->
 		<span class='report-headline'></span>
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Dec 30, 2019 14:50:15</span>
+			<span class='label blue darken-3 suite-start-time'>Dec 30 2019 15:16</span>
 			</a>
 		</ul>
 	</div>
@@ -126,14 +126,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>TC001_LogintoHRM</span>
-						<span class='test-time'>Dec 30, 2019 14:50:25</span>
+						<span class='test-time'>Dec 30 2019 15:16</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 30, 2019 14:50:25</span>
-	<span class='label end-time'>Dec 30, 2019 14:50:37</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 11s+984ms</span>
+	<span class='label start-time'>Dec 30 2019 15:16</span>
+	<span class='label end-time'>Dec 30 2019 15:16</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 11s+31ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,7 +147,7 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>2:50:36 PM</td>
+				<td class='timestamp'>3:16:59 PM</td>
 				<td class='step-details'>
 						Login Data input provided succesfully
 					
@@ -155,10 +155,10 @@
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>2:50:37 PM</td>
+				<td class='timestamp'>3:16:59 PM</td>
 				<td class='step-details'>
 						Test Passed
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='Reports.0/screenshot_12-30-19_14_50_36.png' src='Reports.0/screenshot_12-30-19_14_50_36.png' data-src='Reports.0/screenshot_12-30-19_14_50_36.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='Reports.1/screenshot_12-30-19_15_16_59.png' src='Reports.1/screenshot_12-30-19_15_16_59.png' data-src='Reports.1/screenshot_12-30-19_15_16_59.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -169,14 +169,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>TC002_LogoutTest</span>
-						<span class='test-time'>Dec 30, 2019 14:50:37</span>
+						<span class='test-time'>Dec 30 2019 15:17</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Dec 30, 2019 14:50:37</span>
-	<span class='label end-time'>Dec 30, 2019 14:50:42</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+618ms</span>
+	<span class='label start-time'>Dec 30 2019 15:17</span>
+	<span class='label end-time'>Dec 30 2019 15:17</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+511ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -190,10 +190,10 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>2:50:42 PM</td>
+				<td class='timestamp'>3:17:05 PM</td>
 				<td class='step-details'>
 						Test Passed
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='Reports.0/screenshot_12-30-19_14_50_41.png' src='Reports.0/screenshot_12-30-19_14_50_41.png' data-src='Reports.0/screenshot_12-30-19_14_50_41.png'>
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='Reports.1/screenshot_12-30-19_15_17_04.png' src='Reports.1/screenshot_12-30-19_15_17_04.png' data-src='Reports.1/screenshot_12-30-19_15_17_04.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -241,19 +241,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Dec 30, 2019 14:50:15</div>
+					<div class='panel-lead'>Dec 30 2019 15:16</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Dec 30, 2019 14:50:42</div>
+			 		<div class='panel-lead'>Dec 30 2019 15:17</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 26s+569ms</div>
+					<div class='panel-lead'>0h 0m 24s+697ms</div>
 				</div>
 			</div>
 		</div>
@@ -296,7 +296,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "TC001_LogintoHRM":11.984,"TC002_LogoutTest":4.618
+			        "TC001_LogintoHRM":11.031,"TC002_LogoutTest":4.511
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
